--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shared-element",
+  "name": "shared-element-pokedex",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/stack": "^6.3.10",
+    "@shopify/flash-list": "1.3.1",
+    "@tanstack/react-query": "^4.22.0",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-shared-element": "0.8.4",
+    "react-native-vector-icons": "^9.2.0",
+    "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
